<resources>
    <string name="app_name">Jateng.id</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="todo">TODO</string>
    <string name="cari_kabupaten_kota">Cari Kabupaten / Kota</string>
    <string name="hasil_pencarian">Hasil Pencarian :</string>
    <string name="dugderan">Dugderan</string>
    <string name="wayang_kulit">Wayang Kulit</string>
    <string name="lengger_calung">Lengger Calung</string>
    <string name="begalan">Begalan</string>
    <string name="ebeg">Ebeg</string>
    <string name="macapat">Macapat</string>
    <string name="tari_semarangan">Tari Semarangan</string>
    <string name="tari_bedhaya_ketawang">Tari Bedhaya Ketawang</string>
    <string name="tari_gambyong">Tari Gambyong</string>
    <string name="tari_bondan_payung">Tari Bondan Payung</string>
    <string name="sintren">Sintren</string>
    <string name="ketek_ogleng">Ketek Ogleng</string>
    <string name="hendriirawan">hendriirawan</string>
    <string name="rumah_joglo">Rumah Joglo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batik_solo">Batik Solo</string>
    <string name="rp_75_000">Rp 75.000</string>
    <string name="batik_pekalongan">Batik Pekalongan</string>
    <string name="lurik">Lurik</string>
    <string name="tenun_jepara">Tenun Jepara</string>
    <string name="rp_150_000">Rp 150.000</string>
    <string name="gerabah">Gerabah</string>
    <string name="rp_20_000">Rp 20.000</string>
    <string name="jam_ukir">Jam Ukir</string>
    <string name="rp_99_000">Rp 99.000</string>
    <string name="rp_200_000">Rp 200.000</string>
    <string name="tas_batik">Tas Batik</string>
    <string name="rp_15_000">Rp 15.000</string>
    <string name="rp_35_000">Rp 35.000</string>
</resources>