<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_splash"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/icon_jatengid"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/username"
            android:background="@drawable/bg_search"
            android:textSize="22sp"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="30dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_search"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="30dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_login_menu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="22sp"
            android:background="@drawable/btn_login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun_daftar"
            android:textColor="#6A150F"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>