<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KerajinanFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardPreventCornerOverlap="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:background="@drawable/bg_card"
                            android:src="@drawable/list_kerajinan1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/gerabah"
                            android:padding="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#ff0000"
                            android:text="@string/rp_20_000"
                            android:paddingLeft="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardPreventCornerOverlap="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:background="@drawable/bg_card"
                            android:src="@drawable/list_kerajinan2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/jam_ukir"
                            android:padding="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#ff0000"
                            android:text="@string/rp_99_000"
                            android:paddingLeft="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardPreventCornerOverlap="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:background="@drawable/bg_card"
                            android:src="@drawable/list_kerajinan3"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="Guci keramik Banjarnegara"
                            android:padding="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#ff0000"
                            android:text="@string/rp_200_000"
                            android:paddingLeft="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardPreventCornerOverlap="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:background="@drawable/bg_card"
                            android:src="@drawable/list_kerajinan5"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="Tas Eceng Gondok Rawa Pening"
                            android:padding="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#ff0000"
                            android:text="@string/rp_35_000"
                            android:paddingLeft="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardPreventCornerOverlap="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:gravity="center"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:background="@drawable/bg_card"
                            android:src="@drawable/list_kerajinan4"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/tas_batik"
                            android:padding="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="#ff0000"
                            android:text="@string/rp_15_000"
                            android:paddingLeft="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>