<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListSeniActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_header"
        android:gravity="center"
        android:orientation="vertical">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_kesenian"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitStart"
            android:background="@drawable/bg_header"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_dugderan"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/img_dugderan_new"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="Dugderan"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_wayang_kulit"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/img_wayang_kulit"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/wayang_kulit"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/img_lengger_calung"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/lengger_calung"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/begalan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/begalan"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/img_ebeg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/ebeg"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="16dp"
                card_view:cardPreventCornerOverlap="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/bg_card"
                        android:src="@drawable/img_macapat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/macapat"
                        android:padding="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>